--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "24slides/laravel-saml2": "^2.2",
+        "24slides/laravel-saml2": "dev-fixSailPort",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
@@ -64,4 +64,11 @@
     },
     "minimum-stability": "stable",
     "prefer-stable": true
+    ,
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/raphaelcangucu/laravel-saml2.git"
+        }
+    ]
 }
