--- a/composer.json
+++ b/composer.json
@@ -63,8 +63,7 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
-    ,
+    "prefer-stable": true,
     "repositories": [
         {
             "type": "vcs",
